<resources>
    <string name="app_name">Money Manager</string>
    <string name="text_1">SUMMARY</string>
    <string name="BTN_1">+</string>
    <string name="tipus">Type</string>
    <string name="tipusIngres">Income</string>
    <string name="tipusDespesa">Expense</string>
    <string name="titol">Title</string>
    <string name="quantitatAddMoviment">Quantity</string>
    <string name="dataAddMoviment">Date</string>
    <string name="observacionsAddMoviment">Notes</string>
    <string name="guardarAddMoviment">SAVE</string>
    <string name="classifAddMoviment">Classification</string>
    <string name="cancela">Cancel</string>
    <string name="billClass">Bills</string>
    <string name="varisClass">Others</string>
    <string name="compraClass">Groceries</string>
    <string name="esportClass">Sport</string>
    <string name="transferClass">Transfers</string>
    <string name="transportClass">Transport</string>
    <string name="houseRent">Rent</string>
    <string name="presentsClass">Gift</string>
    <string name="gasClass">Gas</string>
    <string name="mainOutcome">EXPENSES</string>
    <string name="mainIncome">INCOMES</string>
    <string name="AddMovementValidator">Can\'t be empty</string>
    <string name="AddMovementValidatorRadioButton">Select "Expense" or "Income"</string>
    <string name="menuInterval">Interval</string>
    <string name="menuDivisa">Currency</string>
    <string name="report_title">Report</string>
    <string name="create_report">CREATE A REPORT</string>
    <string name="week_report">Weekly report</string>
    <string name="mont_report">Monthly report</string>
    <string name="custom_report">Choose interval</string>
    <string name="no_expenses">No expenses found</string>
    <string name="no_income">No incomes found</string>
    <string name="emptyPicText">No picture found for this transaction</string>
    <string name="mesDe"></string>
    <string name="showReportsActivityTitle">MONTHLY REPORTS</string>
    <string name="showMovimentPicTitle">TRANSACTION PICTURE</string>
    <string name="addEdit">ADD/EDIT</string>
    <string name="addEditToast">Transaction updated</string>
    <string name="createReportTitle">Select a year and a month</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="jul">JUL</string>
    <string name="select_year">Select a year</string>
    <string name="createReportButton">CREATE</string>
    <string name="yearError">Invalid year format</string>
    <string name="monthError">You must select a month</string>
    <string name="reportAlreadyCreated">Report with this date is already created</string>
    <string name="start_date">Start date:</string>
    <string name="endDate">End date:</string>

</resources>