<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/toReports"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="Reports"
        app:showAsAction="always" />
    <item
        android:id="@+id/addMoviment"
        android:icon="@mipmap/plus"
        android:title="ADD"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuDivisa"
        android:title="@string/menuDivisa" />
    <item
        android:id="@+id/menuInterval"
        android:title="@string/menuInterval" >
        <menu >
            <item
                android:id="@+id/monthlyInterval"
                android:title="@string/mont_report" />
            <item
                android:id="@+id/weeklyInterval"
                android:title="@string/week_report" />
        </menu>
    </item>
</menu>