<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/create_report_title"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/createReportTitle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_year_createreport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/select_year"
        app:layout_constraintEnd_toStartOf="@+id/year_createreport"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_report_title" />

    <EditText
        android:id="@+id/year_createreport"
        android:layout_width="98dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/select_year_createreport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/select_year_createreport"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="271dp"
        android:layout_height="362dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_report_title"
        app:layout_constraintVertical_bias="0.447">

        <TextView
            android:id="@+id/january"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/jan"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/february"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/feb"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/march"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/mar"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/april"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/apr"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/may"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/may"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/june"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/jun"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/jul"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/jul"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/august"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/aug"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/september"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/sep"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="2" />

        <TextView
            android:id="@+id/october"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/oct"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/november"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/nov"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/december"
            android:layout_height="wrap_content"
            android:width="90dp"
            android:height="90dp"
            android:gravity="center"
            android:onClick="onMonthClicked"
            android:text="@string/dec"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="3" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="createManualReport"
        android:text="@string/createReportButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/create_manual_report_cancel"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <Button
        android:id="@+id/create_manual_report_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancelManualReportCreation"
        android:text="@android:string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>