<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.manage_money.money_tracker.MainActivity">

    <TextView
        android:id="@+id/monthly_amount"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/resumMensualTitol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/resumMensualTitol" />

    <TextView
        android:id="@+id/resumMensualTitol"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/text_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/monthly_amount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/ingressosButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="60dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="changeTipusMoviment"
        android:text="@string/mainIncome"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/despesesButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/coin_stack_increase" />

    <ImageView
        android:id="@+id/despesesButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="changeTipusMoviment"
        android:text="@string/mainOutcome"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        app:srcCompat="@mipmap/coin_stack_decrease" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieChart">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/llistaMoviments"
                android:layout_width="match_parent"
                android:layout_height="201dp"
                tools:layout_conversion_absoluteHeight="392dp"
                tools:layout_conversion_absoluteWidth="394dp" />
        </LinearLayout>
    </ScrollView>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="411dp"
        android:layout_height="210dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

</androidx.constraintlayout.widget.ConstraintLayout>